@@ -1,3 +1,10 @@
+2003-01-16  Alan Modra  <amodra@bigpond.net.au>
+
+	* readelf.c: Include elf/ppc64.h.
+	(dump_relocations <EM_PPC64>): Use elf_ppc64_reloc_type.
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerate.
+
 2003-01-02  Ben Elliston  <bje@redhat.com>
 
 	* readelf.c (guess_is_rela): Handle EM_IQ2000.
